--- a/Home_Page.html
+++ b/Home_Page.html
@@ -29,16 +29,16 @@
       <div class="other-text">
         <div style="background-color:#333333;text-align:left;padding:10px 40px;">
         <p><h1> M I S S I O N - S T A T E M E N T</h1></p>
-          <p1><p2><div> Our mission statement is to have people become more aware of discrimination. Having people know that they are</div></p2>
-          <div> people out here trying to stop discrimination. </div></p1>
+          <p1><p2><div> Our mission statement is to help people become more aware of discrimination. Just because it is 2018, it does not mean</div></p2>
+          <div> discrimination has gone away. </div></p1>
       </div>
           <div class="paral"></div>
 
         <div style="background-color:#333333;text-align:left;padding:10px 40px;">
           <p><h1> Who We Are</h1></p>
-            <p1><p2><div> This site created was vreated by three Girls Who Code students: Kelly Tong, Reanna Hebert, and Olivia Robertson. This </div></p2>
-            <div>websit is their final project for the summer immersion program. With the help of their peers input and the help of their teachers: </div>
-            <div> William Rivitz, Delaney Harrison, and Lindsey Clearly. These girls were able yo give you the website you are viewing right now.</div></p1>
+            <p1><p2><div> This site was created by three Girls Who Code students: Kelly Tong, Reanna Hebert, and Olivia Robertson. This </div></p2>
+            <div>website is their final project for the summer immersion program. With the help of their peers input and of their teachers: </div>
+            <div> William Rivitz, Delaney Harrison, and Lindsey Clearly. These girls were able to give you the website you are viewing right now.</div></p1>
         </div>
             <div class="parall"></div>
      </div>
